--- a/poise/AD/AD/Web.config
+++ b/poise/AD/AD/Web.config
@@ -18,7 +18,7 @@
   </appSettings>
   <connectionStrings/>
     <system.web>
-       <httpRuntime requestValidationMode="2.0" />
+       <!--<httpRuntime requestValidationMode="2.0" />-->
         <compilation debug="true">
 
           <assemblies>
